Fix card badges font alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,20 @@ body {
   background: #2230d2;
 }
 
+#projects .badges li:nth-of-type(2) {
+  display: flex;
+  align-items: center;
+  opacity: 0.5;
+  font-size: 7px;
+}
+
+#projects .badges li:nth-of-type(4) {
+  display: flex;
+  align-items: center;
+  opacity: 0.5;
+  font-size: 7px;
+}
+
 /* MOBILE ABOUT */
 
 #about {
